--- a/.github/workflows/docker-deploy.yml
+++ b/.github/workflows/docker-deploy.yml
@@ -27,6 +27,10 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     steps:
+      - name: Download dependencies
+        uses: actions/download-artifact@v1
+        with:
+          name: Backend
       - name: pull docker image
         uses: appleboy/ssh-action@master
         with:
