--- a/.github/workflows/docker-deploy.yml
+++ b/.github/workflows/docker-deploy.yml
@@ -31,6 +31,15 @@ jobs:
         uses: actions/download-artifact@v1
         with:
           name: Backend
+      - name: Transfer dependencies to server
+        uses: appleboy/scp-action@master
+        with:
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.USERNAME }}
+          key: ${{ secrets.PRIVATE_KEY }}
+          source: "Backend"
+          target: "/home/ubuntu/duckluckmarket"
+
       - name: pull docker image
         uses: appleboy/ssh-action@master
         with:
