--- a/.github/workflows/docker-deploy.yml
+++ b/.github/workflows/docker-deploy.yml
@@ -23,6 +23,7 @@ jobs:
           name: Backend
           path: |
             ./docker-compose.yml
+            ./log
   deploy:
     runs-on: ubuntu-latest
     needs: build
