--- a/.github/workflows/docker-deploy.yml
+++ b/.github/workflows/docker-deploy.yml
@@ -59,4 +59,5 @@ jobs:
           username: ${{ secrets.USERNAME }}
           key: ${{ secrets.PRIVATE_KEY }}
           script: |
+            cd /home/${{ secrets.USERNAME }}/duckluckmarket/Backend
             sudo docker-compose up -d
