--- a/.github/workflows/docker-deploy.yml
+++ b/.github/workflows/docker-deploy.yml
@@ -61,5 +61,5 @@ jobs:
           key: ${{ secrets.PRIVATE_KEY }}
           script: |
             cd /home/ubuntu/duckluckmarket/Backend
-            echo TAG=${{ env.TAG }} >> .env
+            echo TAG=${{ env.TAG }} > .env
             sudo docker-compose up -d
