--- a/.github/workflows/docker-deploy.yml
+++ b/.github/workflows/docker-deploy.yml
@@ -52,6 +52,11 @@ jobs:
           username: ${{ secrets.USERNAME }}
           key: ${{ secrets.PRIVATE_KEY }}
           script: sudo docker pull ${{ secrets.DOCKERHUB_USERNAME }}/godeploy:${{ env.TAG }}
+      - shell: bash
+        env:
+          POSTGRESQL: ${{ secrets.POSTGRESQL }}
+        run: |
+          echo "$POSTGRESQL" > /home/ubuntu/duckluckmarket/Backend/configs/envs/postgresql.env
       - name: deploy docker image
         uses: appleboy/ssh-action@master
         with:
@@ -63,7 +68,7 @@ jobs:
             cd /home/ubuntu/duckluckmarket/Backend
             echo TAG=${{ env.TAG }} > .env
             echo ${{ secrets.API_SERVER }} > ./configs/envs/api_server.env
-            echo ${{ secrets.POSTGRESQL }} > ./configs/envs/postgresql.env
+#            echo ${{ secrets.POSTGRESQL }} > ./configs/envs/postgresql.env
             echo ${{ secrets.REDIS }} > ./configs/envs/redis.env
             echo ${{ secrets.S3 }} > ./configs/envs/s3.env
             sudo docker-compose up -d
