--- a/.github/workflows/docker-deploy.yml
+++ b/.github/workflows/docker-deploy.yml
@@ -63,8 +63,8 @@ jobs:
             cd /home/ubuntu/duckluckmarket/Backend
             echo TAG=${{ env.TAG }} > .env
             base64 -i ./configs/envs/postgresql.env
-            echo ${{ secrets.POSTGRESQL }} | base64 -d > ./configs/envs/postgresql.env
-            echo ${{ secrets.API_SERVER }} > ./configs/envs/api_server.env
-            echo ${{ secrets.REDIS }} > ./configs/envs/redis.env
-            echo ${{ secrets.S3 }} > ./configs/envs/s3.env
+            sudo echo ${{ secrets.POSTGRESQL }} | base64 -d > ./configs/envs/postgresql.env
+            sudo echo ${{ secrets.API_SERVER }} > ./configs/envs/api_server.env
+            sudo echo ${{ secrets.REDIS }} > ./configs/envs/redis.env
+            sudo echo ${{ secrets.S3 }} > ./configs/envs/s3.env
             sudo docker-compose up -d
