OZON-81 Add rebuild postgres and server containers

--- a/.github/workflows/docker-deploy.yml
+++ b/.github/workflows/docker-deploy.yml
@@ -64,4 +64,6 @@ jobs:
           script: |
             cd /home/ubuntu/duckluckmarket/Backend
             echo TAG=${{ env.TAG }} > .env
+            sudo docker-compose rm -fsv postgres
+            sudo docker-compose rm -fsv server
             sudo docker-compose up -d
