--- a/.github/workflows/docker-deploy.yml
+++ b/.github/workflows/docker-deploy.yml
@@ -16,10 +16,14 @@ jobs:
       - uses: actions/checkout@v1
       - name: Login to DockerHub Registry
         run: echo ${{ secrets.DOCKERHUB_PASSWORD }} | docker login -u ${{ secrets.DOCKERHUB_USERNAME }} --password-stdin
-      - name: Build Docker image
+      - name: Build Docker server image
         run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/godeploy:${{ env.TAG }} .
-      - name: Push the image
+      - name: Push the server image
         run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/godeploy:${{ env.TAG }}
+      - name: Build Docker postgres image
+        run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/postgres:${{ env.TAG }} --target postgres .
+      - name: Push the postgres image
+        run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/postgres:${{ env.TAG }}
       - name: Upload dependencies
         uses: actions/upload-artifact@v2
         with:
