--- a/.github/workflows/docker-deploy.yml
+++ b/.github/workflows/docker-deploy.yml
@@ -16,9 +16,9 @@ jobs:
       - uses: actions/checkout@v1
       - name: Login to DockerHub Registry
         run: echo ${{ secrets.DOCKERHUB_PASSWORD }} | docker login -u ${{ secrets.DOCKERHUB_USERNAME }} --password-stdin
-      - name: Build Docker server image
-        run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/godeploy:${{ env.TAG }} --target server .
-      - name: Push the server image
+      - name: Build Docker api_server image
+        run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/godeploy:${{ env.TAG }} --target api_server .
+      - name: Push the api_server image
         run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/godeploy:${{ env.TAG }}
       - name: Build Docker postgres image
         run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/postgres:${{ env.TAG }} --target postgres .
@@ -41,7 +41,7 @@ jobs:
         uses: actions/download-artifact@v1
         with:
           name: Backend
-      - name: Transfer dependencies to server
+      - name: Transfer dependencies to api_server
         uses: appleboy/scp-action@master
         with:
           host: ${{ secrets.HOST }}
@@ -50,7 +50,7 @@ jobs:
           source: "Backend"
           target: "/home/ubuntu/duckluckmarket"
 
-      - name: pull server docker image
+      - name: pull api_server docker image
         uses: appleboy/ssh-action@master
         with:
           envs: GITHUB_SHA
