--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,22 @@
 version: '3'
 
 services:
-  postgres:
+  api-db:
     image: duckluckmarket/postgres:${TAG}
     restart: unless-stopped
     environment:
       - POSTGRES_HOST_AUTH_METHOD=trust
     volumes:
-      - ./configs/init_auth_db.sql:/docker-entrypoint-initdb.d/init_auth_db.sql
+      - ./scripts/postgresql/init_api_db.sql:/docker-entrypoint-initdb.d/init_auth_db.sql
+    networks:
+      - app-network
+  auth-db:
+    image: postgres
+    restart: unless-stopped
+    environment:
+      - POSTGRES_HOST_AUTH_METHOD=trust
+    volumes:
+      - ./scripts/postgresql/init_auth_db.sql:/docker-entrypoint-initdb.d/init_auth_db.sql
     networks:
       - app-network
   redis:
