--- a/.github/workflows/docker-deploy.yml
+++ b/.github/workflows/docker-deploy.yml
@@ -28,6 +28,10 @@ jobs:
         run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/session-service:${{ env.TAG }} --target session-service .
       - name: Push the session-service image
         run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/session-service:${{ env.TAG }}
+      - name: Build Docker cart-service image
+        run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/cart-service:${{ env.TAG }} --target cart-service .
+      - name: Push the cart-service image
+        run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/cart-service:${{ env.TAG }}
       - name: Upload dependencies
         uses: actions/upload-artifact@v2
         with:
