--- a/.github/workflows/docker-deploy.yml
+++ b/.github/workflows/docker-deploy.yml
@@ -70,14 +70,14 @@ jobs:
           username: ${{ secrets.USERNAME }}
           key: ${{ secrets.PRIVATE_KEY }}
           script: sudo docker pull ${{ secrets.DOCKERHUB_USERNAME }}/api-server:${{ env.TAG }}
-      - name: pull postgres docker image
+      - name: pull api-db docker image
         uses: appleboy/ssh-action@master
         with:
           envs: GITHUB_SHA
           host: ${{ secrets.HOST }}
           username: ${{ secrets.USERNAME }}
           key: ${{ secrets.PRIVATE_KEY }}
-          script: sudo docker pull ${{ secrets.DOCKERHUB_USERNAME }}/postgres:${{ env.TAG }}
+          script: sudo docker pull ${{ secrets.DOCKERHUB_USERNAME }}/api-db:${{ env.TAG }}
       - name: deploy docker image
         uses: appleboy/ssh-action@master
         with:
