--- a/.github/workflows/docker-deploy.yml
+++ b/.github/workflows/docker-deploy.yml
@@ -102,6 +102,14 @@ jobs:
           username: ${{ secrets.USERNAME }}
           key: ${{ secrets.PRIVATE_KEY }}
           script: sudo docker pull ${{ secrets.DOCKERHUB_USERNAME }}/auth-service:${{ env.TAG }}
+      - name: pull auth-db docker image
+        uses: appleboy/ssh-action@master
+        with:
+          envs: GITHUB_SHA
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.USERNAME }}
+          key: ${{ secrets.PRIVATE_KEY }}
+          script: sudo docker pull ${{ secrets.DOCKERHUB_USERNAME }}/auth-db:${{ env.TAG }}
       - name: deploy docker image
         uses: appleboy/ssh-action@master
         with:
