--- a/.github/workflows/docker-deploy.yml
+++ b/.github/workflows/docker-deploy.yml
@@ -36,6 +36,10 @@ jobs:
         run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/cart-service:${{ env.TAG }} --target cart-service .
       - name: Push the cart-service image
         run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/cart-service:${{ env.TAG }}
+      - name: Build Docker cart-db image
+        run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/cart-db:${{ env.TAG }} --target cart-db .
+      - name: Push the cart-db image
+        run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/cart-db:${{ env.TAG }}
       - name: Build Docker auth-service image
         run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/auth-service:${{ env.TAG }} --target auth-service .
       - name: Push the auth-service image
