--- a/.github/workflows/docker-deploy.yml
+++ b/.github/workflows/docker-deploy.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Push the session-service image
         run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/session-service:${{ env.TAG }}
       - name: Build Docker session-db image
-        run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/session-db:${{ env.TAG }} --target api-db .
+        run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/session-db:${{ env.TAG }} --target session-db .
       - name: Push the session-db image
         run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/session-db:${{ env.TAG }}
       - name: Build Docker cart-service image
