--- a/.github/workflows/docker-deploy.yml
+++ b/.github/workflows/docker-deploy.yml
@@ -44,6 +44,10 @@ jobs:
         run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/auth-service:${{ env.TAG }} --target auth-service .
       - name: Push the auth-service image
         run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/auth-service:${{ env.TAG }}
+      - name: Build Docker auth-db image
+        run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/auth-db:${{ env.TAG }} --target auth-db .
+      - name: Push the auth-db image
+        run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/auth-db:${{ env.TAG }}
       - name: Upload dependencies
         uses: actions/upload-artifact@v2
         with:
