--- a/.github/workflows/docker-deploy.yml
+++ b/.github/workflows/docker-deploy.yml
@@ -43,7 +43,7 @@ jobs:
           path: |
             ./docker-compose.yml
             ./log
-            ./configs/init.sql
+            ./scripts
             ./uploads
   deploy:
     runs-on: ubuntu-latest
