--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     environment:
       - POSTGRES_HOST_AUTH_METHOD=trust
     volumes:
-      - ./scripts/postgresql/init_api_db.sql:/docker-entrypoint-initdb.d/init_auth_db.sql
+      - ./scripts/postgresql/init_api_db.sql:/docker-entrypoint-initdb.d/init_api_db.sql
     networks:
       - api-network
   auth-db:
