--- a/.github/workflows/docker-deploy.yml
+++ b/.github/workflows/docker-deploy.yml
@@ -112,4 +112,5 @@ jobs:
           script: |
             cd /home/ubuntu/duckluckmarket/Backend
             echo TAG=${{ env.TAG }} > .env
+            sudo docker-compose down
             sudo docker-compose up -d
