--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -83,6 +83,23 @@ services:
     networks:
       - cart-network
       - app-network
+  prometheus:
+    image: prom/prometheus
+    privileged: true
+    restart: always
+    volumes:
+      - ./configs/prometheus/prometheus.yml:/configs/prometheus/prometheus.yml
+    command:
+      - '--config.file=/configs/prometheus/prometheus.yml'
+      - '--storage.tsdb.path=/prometheus'
+      - '--storage.tsdb.retention=20d'
+      - '--web.console.libraries=/usr/share/prometheus/console_libraries'
+      - '--web.console.templates=/usr/share/prometheus/consoles'
+
+    networks:
+      - app-network
+    ports:
+      - "9100:9100"
 networks:
   api-network:
     driver: bridge
