--- a/configs/prometheus/prometheus.yml
+++ b/configs/prometheus/prometheus.yml
@@ -3,13 +3,12 @@ global:
   evaluation_interval: 10s
 
 scrape_configs:
+  - job_name: 'node'
+    static_configs:
+      - targets: ['node-exporter:9100']
   - job_name: 'golang'
-    metrics_path: '/metrics'
     static_configs:
-      - targets: ['localhost:8080']
-  - job_name: 'system'
-    static_configs:
-      - targets: ['localhost:9100']
+      - targets: ['api-server:8080']
   - job_name: 'prometheus'
     static_configs:
-      - targets: ['localhost:9090']
+      - targets: ['prometheus:9090']
