OZON-105 Add metrics for services

--- a/configs/prometheus/prometheus.yml
+++ b/configs/prometheus/prometheus.yml
@@ -6,9 +6,10 @@ scrape_configs:
   - job_name: 'node'
     static_configs:
       - targets: ['node-exporter:9100']
-  - job_name: 'golang'
+  - job_name: 'api_server'
+    metrics_path: '/metrics'
     static_configs:
-      - targets: ['api-server:8080']
+      - targets: ['api-server:9090', 'session-service:9090', 'cart-service:9090', 'auth-service:9090']
   - job_name: 'prometheus'
     static_configs:
       - targets: ['prometheus:9090']
