--- a/configs/prometheus/prometheus.yml
+++ b/configs/prometheus/prometheus.yml
@@ -6,7 +6,7 @@ scrape_configs:
   - job_name: 'node'
     static_configs:
       - targets: ['node-exporter:9100']
-  - job_name: 'api_server'
+  - job_name: 'services'
     metrics_path: '/metrics'
     static_configs:
       - targets: ['api-server:8080', 'session-service:9090', 'cart-service:9090', 'auth-service:9090']
@@ -15,10 +15,9 @@ scrape_configs:
       - targets: ['prometheus:9090']
 
 rule_files:
-  - 'alerts.yml'
+  - '/configs/prometheus/alerts.yml'
 
 alerting:
   alertmanagers:
     - static_configs:
-        - targets:
-            - alertmanager:9093
+        - targets: ["alertmanager:9093"]
