OZON-105 Add configs transfer

--- a/.github/workflows/docker-deploy.yml
+++ b/.github/workflows/docker-deploy.yml
@@ -45,6 +45,7 @@ jobs:
             ./log
             ./scripts
             ./uploads
+            ./configs
   deploy:
     runs-on: ubuntu-latest
     needs: build
