OZON-120 Add grafana volumes

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -122,6 +122,10 @@ services:
       - node-exporter
     env_file:
       - configs/envs/grafana/main.env
+    volumes:
+      - grafana-storage:/var/lib/grafana
+      - ./services_data/grafana/datasources:/etc/grafana/datasources
+      - ./services_data/grafana/dashboards:/etc/grafana/dashboards
     ports:
       - "3030:3000"
     networks:
@@ -160,3 +164,6 @@ networks:
     driver: bridge
   app-network:
     driver: bridge
+volumes:
+  grafana-storage:
+    external: true
